--- a/Peergrade005/Peergrade005/MainWindow.xaml
+++ b/Peergrade005/Peergrade005/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Peergrade005"
         mc:Ignorable="d"
-        Title="Fractals" Height="540" Width="960" Background="White" Icon="/Fractal.png" SizeChanged="MainWindowKernel_SizeChanged" Foreground="Black">
+        Title="Fractals" Height="540" Width="960" Background="White" Icon="/Fractal.png" Foreground="Black">
     <Window.Resources>
         <Style x:Key="SliderRepeatButton" TargetType="RepeatButton">
             <Setter Property="SnapsToDevicePixels" Value="true" />
@@ -671,6 +671,7 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
+
         <TextBlock x:Name="TypeFractalTextBlock" Grid.Column="0" Grid.Row="0" Background="White" Text="Тип фрактала: Фрактальное Дерево" Grid.ColumnSpan="5" FontWeight="Bold" TextDecorations="{x:Null}" FontStyle="Normal" FontStretch="Normal" TextWrapping="NoWrap" HorizontalAlignment="Stretch" TextAlignment="Center" Foreground="Black" />
         <TextBlock x:Name="ZoomTextBlock" Grid.Column="5" Grid.Row="0" Background="White" Text="Масштаб: x1" Grid.ColumnSpan="3" FontWeight="Bold" TextDecorations="{x:Null}" FontStyle="Normal" FontStretch="Normal" TextWrapping="NoWrap" HorizontalAlignment="Stretch" TextAlignment="Center" Foreground="Black" />
         <TextBlock x:Name="ImageTextBlock" Grid.Column="8" Grid.Row="0" Background="White" Text="Изображение" Grid.ColumnSpan="2" FontWeight="Bold" TextDecorations="{x:Null}" FontStyle="Normal" FontStretch="Normal" TextWrapping="NoWrap" HorizontalAlignment="Stretch" TextAlignment="Center" Foreground="Black" />
